JEAP-6647 Migrate maven plugin tests to MojoTest