@@ -2,53 +2,51 @@ package ch.admin.bit.jeap.messaging.avro.pluginIntegration;
 
 import ch.admin.bit.jeap.messaging.avro.plugin.mojo.MessageTypeArtifactsDeployerMojo;
 import org.apache.commons.io.FileUtils;
+import org.apache.maven.api.plugin.testing.Basedir;
+import org.apache.maven.api.plugin.testing.InjectMojo;
+import org.apache.maven.api.plugin.testing.MojoTest;
 import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.testing.MojoRule;
-import org.junit.Assert;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
-@SuppressWarnings("java:S1874")
-public class MessageTypeArtifactsDeployerMojoTest extends AbstractAvroMojoTest {
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
-    @Rule
-    public MojoRule mojoRule = new MojoRule();
+@MojoTest
+class MessageTypeArtifactsDeployerMojoTest extends AbstractAvroMojoTest {
 
-    @Test
-    public void execute_noSourcesDirectory_nothingDeployed() throws Exception {
-        // arrange
-        final File testDirectory = syncWithNewTempDirectory("src/test/resources/sample-message-type-artifacts-deploy");
-        final File targetDirectory = new File(testDirectory, "target/generated-sources");
-        final MessageTypeArtifactsDeployerMojo myMojo = (MessageTypeArtifactsDeployerMojo) mojoRule.lookupConfiguredMojo(testDirectory, "deploy-message-type-artifacts");
+    private static final String BASEDIR = "src/test/resources/sample-message-type-artifacts-deploy";
 
-        // act
-        myMojo.execute();
-
-        // assert
-        Assert.assertFalse(Files.exists(Path.of(targetDirectory.getAbsolutePath())));
+    @AfterEach
+    void cleanup() {
+        deleteTargetDir(BASEDIR);
     }
 
     @Test
-    public void execute_sourcesDirectoryExists_projectsDeployed() throws Exception {
-        // arrange
-        final File testDirectory = syncWithNewTempDirectory("src/test/resources/sample-message-type-artifacts-deploy");
-        final File targetDirectory = new File(testDirectory, "target/generated-sources");
-        Files.createDirectories(targetDirectory.toPath());
-        FileUtils.copyDirectory(Paths.get("src/test/resources/sample-project").toFile(), Paths.get(targetDirectory.getAbsolutePath()).toFile());
-        final MessageTypeArtifactsDeployerMojo myMojo = (MessageTypeArtifactsDeployerMojo) mojoRule.lookupConfiguredMojo(testDirectory, "deploy-message-type-artifacts");
+    @Basedir(BASEDIR)
+    @InjectMojo(goal = "deploy-message-type-artifacts")
+    void execute_noSourcesDirectory_nothingDeployed(MessageTypeArtifactsDeployerMojo myMojo) throws Exception {
+        myMojo.execute();
+        assertFalse(Files.exists(Path.of(BASEDIR, "target/generated-sources")));
+    }
 
-        // act
+    @Test
+    @Basedir(BASEDIR)
+    @InjectMojo(goal = "deploy-message-type-artifacts")
+    void execute_sourcesDirectoryExists_projectsDeployed(MessageTypeArtifactsDeployerMojo myMojo) throws Exception {
+        File targetDirectory = new File(BASEDIR, "target/generated-sources");
+        Files.createDirectories(targetDirectory.toPath());
+        FileUtils.copyDirectory(Paths.get("src/test/resources/sample-project").toFile(), targetDirectory);
+
         try {
             myMojo.execute();
         } catch (MojoExecutionException e) {
-            // assert
-            Assert.assertEquals("Build failed with exitCode 127", e.getMessage());
+            assertEquals("Build failed with exitCode 127", e.getMessage());
         }
     }
-
 }
